RESOLVED FIXED95558
[Qt] The LayerTreeRenderer::callOnMainTread method name is misleading
https://bugs.webkit.org/show_bug.cgi?id=95558
Summary [Qt] The LayerTreeRenderer::callOnMainTread method name is misleading
Balazs Kelemen
Reported 2012-08-31 04:58:36 PDT
This is a typo. The function is actually named callOnMainTread (no h), but call sites spells it correctly so they call WTF::callOnMainThread.
Attachments
Patch (3.43 KB, patch)
2012-08-31 05:03 PDT, Balazs Kelemen
no flags
Patch (3.41 KB, patch)
2012-08-31 05:49 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2012-08-31 05:03:01 PDT
Rafael Brandao
Comment 2 2012-08-31 05:12:56 PDT
Comment on attachment 161668 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=161668&action=review > Source/WebKit2/ChangeLog:3 > + [Qt] LayerTreeRenderer::callOnMainThread is brokken like this senteance You should rewrite this bug title, it's not clear what are you trying to fix by reading that and there are typos ("broken" and "sentence"). > Source/WebKit2/ChangeLog:10 > + make it clear that these things are not the same. Could you explain the difference? For some reason I think "call" is more clear, but maybe I didn't get what this is actually doing.
Balazs Kelemen
Comment 3 2012-08-31 05:49:13 PDT
Kenneth Rohde Christiansen
Comment 4 2012-08-31 05:52:26 PDT
Comment on attachment 161677 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=161677&action=review > Source/WebKit2/ChangeLog:3 > + [Qt] LayerTreeRenderer::callOnMainThread is mistyped I changed the bug name as this is even more misleading... it sounds like it is using wrong types
Balazs Kelemen
Comment 5 2012-08-31 05:53:56 PDT
(In reply to comment #4) > (From update of attachment 161677 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=161677&action=review > > > Source/WebKit2/ChangeLog:3 > > + [Qt] LayerTreeRenderer::callOnMainThread is mistyped > > I changed the bug name as this is even more misleading... it sounds like it is using wrong types Ok, right, I actually uploaded a new patch but I can fix the changelog title before landing.
Kenneth Rohde Christiansen
Comment 6 2012-08-31 06:00:26 PDT
Comment on attachment 161677 [details] Patch That is fine
Balazs Kelemen
Comment 7 2012-08-31 10:08:26 PDT
Note You need to log in before you can comment on or make changes to this bug.