[Qt] LayerTreeRenderer::callOnMainTread method name is misleading https://bugs.webkit.org/show_bug.cgi?id=95558

Reviewed by Kenneth Rohde Christiansen.

Fix the typo in the function name so callers will really call this
and not WTF::callOnMainThread. Renamed to dispatchOnMainThread to
make it clear that these things are not the same.

* UIProcess/CoordinatedGraphics/LayerTreeRenderer.cpp:
(WebKit::LayerTreeRenderer::dispatchOnMainThread):
(WebKit::LayerTreeRenderer::flushLayerChanges):
(WebKit::LayerTreeRenderer::purgeGLResources):
* UIProcess/CoordinatedGraphics/LayerTreeRenderer.h:
(LayerTreeRenderer):

Canonical link: https://commits.webkit.org/113437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127273 268f45cc-cd09-0410-ab3c-d52691b4dbfc